fix gap après suppression abusive

--- a/00_spreadsheet.css
+++ b/00_spreadsheet.css
@@ -208,6 +208,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 40px;
         transition: opacity 600ms;
     }
 
